samples/_failures_safe/1761363389_28cd43_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03fabf3b.c: In function ‘main’:
./samples/SAFE/__tmp_03fabf3b.c:154:5: error: expected declaration or statement at end of input
  154 |     tm_info = localtime(&latest);
      |     ^~~~~~~
